# vst-host

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md
custom_cmake_modules/: CMakeLists.txt  format_source_files.cmake
design/: Ideas.md
src/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
